--- a/secondChance-backend/package.json
+++ b/secondChance-backend/package.json
@@ -27,6 +27,11 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.3.0",
     "@testing-library/react": "^14.1.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "chai": "^4.3.10",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
